--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
 anyio==4.6.2.post1
 audioread==3.0.1
 certifi==2024.8.30
@@ -6,30 +7,46 @@ cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
+cloudpickle==3.1.0
 contourpy==1.3.1
 cycler==0.12.1
 decorator==5.1.1
 dnspython==2.7.0
+einops==0.8.0
+exceptiongroup==1.2.2
 fastapi==0.115.5
+filelock==3.16.1
 fonttools==4.55.0
+fsspec==2024.10.0
 futures==3.0.5
 h11==0.14.0
 h5py==3.12.1
 httptools==0.6.4
+huggingface-hub==0.26.2
+hydra-core==1.3.2
 idna==3.10
+Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.7
+lameenc==1.7.0
 langcodes==3.4.1
 language_data==1.2.0
 lazy_loader==0.4
 librosa==0.10.2.post1
 llvmlite==0.43.0
+madmom @ git+https://github.com/CPJKU/madmom@27f032e8947204902c675e5e341a3faf5dc86dae
 marisa-trie==1.2.1
+MarkupSafe==3.0.2
 matplotlib==3.9.2
+mido==1.3.3
+mpmath==1.3.0
 msgpack==1.1.0
 mutagen==1.47.0
+networkx==3.4.2
+ninja==1.11.1.1
 numba==0.60.0
 numpy==2.0.2
+omegaconf==2.3.0
 packaging==24.2
 pandas==2.2.3
 pathlib==1.0.1
@@ -48,18 +65,23 @@ python-magic==0.4.27
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
+retrying==1.3.4
 scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
-setuptools==75.5.0
 six==1.16.0
 sniffio==1.3.1
 soundfile==0.12.1
 soxr==0.5.0.post1
 SQLAlchemy==2.0.36
 starlette==0.41.3
+submitit==1.5.2
+sympy==1.13.1
 threadpoolctl==3.5.0
-tqdm
+torch==2.5.1
+torchaudio==2.5.1
+tqdm==4.67.0
+treetable==0.2.5
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
